--- a/index.html
+++ b/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Palabras</title>
+<meta charset="UTF-8">
+ <meta http-equiv="X-UA-Compatible" content="IE=edge">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>Palabras</title>
 </head>
 <body>
-    <h1>Lista de palabras</h1>
-    <ul>
-        <!-- imprime los elementos de la lista  -->
-    </ul>
+ <h1>Lista de palabras</h1>
+ <ul id="miLista">
+<!-- imprime los elementos de la lista  -->
+</ul>
 </body>
+<script src="/app.js"></script>
 </html>
+
+/**
+* Contras:
+* 
+* Repasar el uso de funciones, aterrizar ideas, checar el bien el audio para mejorar 
+* la comunicación. Manejar tiempos, tomar consciencia de que estamos siendo entrevistados.
+* Leer bien las instrucciones 
+*
+* 
+* Pros:
+* 
+* Se fue diciendo lo que si iba haciendo para que no exisitiera momentos incomodos, buena expresión de lo
+* que se quería hacer y explicación de lo que se iba haciendo. 
+* 
+* 
+
+*/
